SASS tidy-up: reset file tidied up + other SASS files

--- a/MVC.WebUI/Content/website/css/scss/_core/forms.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/forms.scss
@@ -1,52 +1,21 @@
-﻿/*******************************************************************************************************************************/
+﻿/***************************************************************************************************************************************************/
 /* FORMS */
-/*******************************************************************************************************************************/
+/***************************************************************************************************************************************************/
 
+/***************************************************************************************************************************************************/
+/* FIELDS */
 
-/*******************************************************************************************************************************/
-/* STANDARD FORM */
-
-.form {
-    fieldset {
-
-    }
-
-    legend {
-
-    }
-
-    .label[for] {
-
-    }
-
-    /* <input type="text|email|url|tel"> */
-    .text-field {
-
-        &.textarea {
-        }
-    }
-
-    input[type="checkbox"] {
-    }
-
-    input[type="radio"] {
-    }
-
-    select {
-
-    }
-
-    /* error messages */
-    .error {
-
-    }
+/* renders field (but not content) invisible: */
+.invisible {
+    border: none;
+    font: inherit;
+    line-height: inherit;
+    vertical-align: baseline;
+    background-color: transparent;
 }
 
 
-
-/************************************************************************************************************************************************************************************/
-/* Built-in ASP.NET MVC validation classes*/
-
+/* Built-in ASP.NET MVC validation classes */
 .validation-summary-errors {
     margin: 1em 0;
     padding: 1em;
@@ -65,3 +34,51 @@
 .field-validation-error {
     color: #CC0000;
 }
+
+
+
+
+/***************************************************************************************************************************************************/
+/* STANDARD FORM */
+
+.form {
+    /* Fieldsets & Legends - <fieldset>, <legend> **************************************************************************************************/
+    fieldset {
+    }
+
+    legend {
+    }
+
+    /* Labels - <label> ****************************************************************************************************************************/
+    .label[for] {
+    }
+
+    /* Text Fields - <input type="color|date|datetime|datetime-local|email|month|number|password|search|tel|text|time|url|week">, <textarea> *******/
+    .text-field {
+
+        &.textarea {
+        }
+    }
+
+    /* Checkboxes & Radio Buttons - <input type="checkbox|radio"> **********************************************************************************/
+    input[type="checkbox"] {
+    }
+
+    input[type="radio"] {
+    }
+
+    /* Dropdown Lists - <select>, <datalist> *******************************************************************************************************/
+    select {
+    }
+
+    /* Buttons - <button>, <input type="button|image|reset|submit"> ********************************************************************************/
+    button {
+    }
+
+    /* Errors **************************************************************************************************************************************/
+    .validation-error {
+    }
+}
+
+
+
