More tidying-up of Content files.

--- a/MVC.WebUI/Content/website/css/scss/_variables.scss
+++ b/MVC.WebUI/Content/website/css/scss/_variables.scss
@@ -2,6 +2,9 @@
 /* VARIABLES */
 /***********************************************************************************************************************************************/
 
+/*
+    CSS Variables: Firefox 31+, Chrome 49+, Opera 36+, Safari 9.1+, Safari IOS 9.3+ - not IE or Edge
+*/
 
 /***********************************************************************************************************************************************/
 /* Colours */
